--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,84 +4,189 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:fitsSystemWindows="true"
-    tools:context=".SignupActivity">
-
-    <LinearLayout
+    android:paddingLeft="18dp"
+    android:paddingRight="18dp"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
+    android:gravity="center"
+    android:background="@drawable/ic_background"
+    >
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="@dimen/activity_horizontal_margin">
-
+        android:scrollbars="none"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_gravity="center">
 
         <ImageView
-            android:layout_width="@dimen/logo_w_h"
-            android:layout_height="@dimen/logo_w_h"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="30dp"
+            android:padding="16dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginBottom="20dp"
             android:src="@mipmap/ic_launcher" />
 
-<!--        <android.support.design.widget.TextInputLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content">-->
+        <EditText
+            android:id="@+id/regfullname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:ems="10"
+            android:background="@android:color/transparent"
+            android:drawablePadding="8dp"
+            android:hint="Full Name"
+            android:textColorHint="#fff"
+            android:maxLines="1"
+            android:drawableLeft="@drawable/ic_person"
+            android:layout_marginTop="10dp"
+            />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#f9d7db"
+                />
+            <EditText
+            android:id="@+id/regusername"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:ems="10"
+            android:background="@android:color/transparent"
+            android:drawablePadding="8dp"
+            android:hint="Choose Username"
+            android:textColorHint="#fff"
+            android:maxLines="1"
+            android:drawableLeft="@drawable/ic_person"
+            android:layout_marginTop="15dp"
+            />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#f9d7db"
+                />
 
             <EditText
                 android:id="@+id/regemail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/email"
                 android:inputType="textEmailAddress"
+                android:ems="10"
+                android:background="@android:color/transparent"
+                android:drawablePadding="8dp"
+                android:hint="Email Address"
+                android:textColorHint="#fff"
                 android:maxLines="1"
-                android:singleLine="true"
-                android:autofillHints="@android:string/autofill"
-                android:textColor="@android:color/white" />
+                android:drawableLeft="@drawable/ic_email_black_24dp"
+                android:layout_marginTop="15dp"
+                />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#f9d7db"
+                />
 
-<!--        </android.support.design.widget.TextInputLayout>-->
+            <EditText
+                android:id="@+id/regaddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:ems="10"
+                android:background="@android:color/transparent"
+                android:drawablePadding="8dp"
+                android:hint="Address"
+                android:textColorHint="#fff"
+                android:maxLines="1"
+                android:drawableLeft="@drawable/ic_edit_location_black_24dp"
+                android:layout_marginTop="15dp"
+                />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#f9d7db"
+                />
 
-<!--        <android.support.design.widget.TextInputLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content">-->
+            <EditText
+                android:id="@+id/regphoneno"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="phone"
+                android:ems="10"
+                android:background="@android:color/transparent"
+                android:drawablePadding="8dp"
+                android:hint="Contact No."
+                android:textColorHint="#fff"
+                android:maxLines="1"
+                android:drawableLeft="@drawable/ic_contact_phone_black_24dp"
+                android:layout_marginTop="15dp"
+                />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#f9d7db"
+                />
 
             <EditText
                 android:id="@+id/regpassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:focusableInTouchMode="true"
-                android:hint="@string/hint_password"
-                android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
+                android:ems="10"
+                android:background="@android:color/transparent"
+                android:drawablePadding="8dp"
+                android:hint="Password"
+                android:textColorHint="#fff"
                 android:maxLines="1"
-                android:singleLine="true"
-                android:textColor="@android:color/white" />
+                android:drawableLeft="@drawable/ic_lock"
+                android:layout_marginTop="15dp"
+                />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#f9d7db"
+                />
+            <EditText
+                android:id="@+id/regconfpassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:background="@android:color/transparent"
+                android:drawablePadding="8dp"
+                android:hint="Confirm Password"
+                android:textColorHint="#fff"
+                android:maxLines="1"
+                android:drawableLeft="@drawable/ic_lock"
+                android:layout_marginTop="15dp"
+                />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#f9d7db"
+                />
 
-<!--        </android.support.design.widget.TextInputLayout>-->
+            <Button
+                android:id="@+id/sign_up_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_button_background"
+                android:text="Sign Up"
+                android:textColor="#00695C"
+                android:textAllCaps="false"
+                android:padding="16dp"
+                android:clickable="true"
+                style="@style/Base.TextAppearance.AppCompat.Body1"
+                android:layout_marginTop="24dp"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                />
 
-        <Button
-            android:id="@+id/sign_up_button"
-            style="?android:textAppearanceSmall"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@color/colorAccent"
-            android:text="@string/action_sign_in_short"
-            android:textColor="@android:color/black"
-            android:textStyle="bold" />
-
-<!--        <Button-->
-<!--            android:id="@+id/btn_reset_password"-->
-<!--            android:layout_width="fill_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="20dip"-->
-<!--            android:background="@null"-->
-<!--            android:text="@string/btn_forgot_password"-->
-<!--            android:textAllCaps="false"-->
-<!--            android:textColor="@color/colorAccent" />-->
-
-        <!-- Link to Login Screen -->
-
-        <Button
+            <Button
             android:id="@+id/sign_in_button"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -90,15 +195,7 @@
             android:text="@string/btn_link_to_login"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="15sp" />
+            android:textSize="20sp" />
+        </LinearLayout>
+    </ScrollView>
     </LinearLayout>
-
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="center|bottom"
-        android:layout_marginBottom="20dp"
-        android:visibility="gone" />
-</LinearLayout>
